--- a/E-Sport.html
+++ b/E-Sport.html
@@ -101,7 +101,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center mb-3">
-          <img src="img/Rocket-League-Logo.svg" alt="Rocket League Logo" width="150">
+          <img src="Rocket-League-Logo.svg" alt="Rocket League Logo" width="150">
         </div>
         <div class="col-md-4 text-center mb-3">
           <h5 class="fw-bold">Links</h5>
